--- a/EmaiService/src/main/resources/application.properties
+++ b/EmaiService/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=EmaiService
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=springmcserv@gmail.com
+spring.mail.password=ngmq epvw hqxh ogzx
+secretKey = Amin
+count = 6
+expiryTime = 5
