--- a/EmaiService/src/main/resources/application.properties
+++ b/EmaiService/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.mail.password=ngmq epvw hqxh ogzx
 secretKey = Amin
 count = 6
 expiryTime = 5
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+server.port=8084
