--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -19,5 +19,7 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    admin:
+      auto-create: true
 server:
   port: 8080
